@@ -25,7 +25,7 @@ do
 done
 
 # prepare examples for distribution
-for example in $(find $TARGET_BUILD_DIR/Examples -depth 1)
+for example in $(find $TARGET_BUILD_DIR/Examples -depth 1 -not -name '.*')
 do
     rm -rf $example/{build,*.xcodeproj/{*.{mode1v3,pbxuser},project.xcworkspace,xcuserdata},ZBarSDK}
     cp -af $BUILT_PRODUCTS_DIR/ZBarSDK $example/
